--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@noble/secp256k1": "^2.2.3",
     "dagre": "^0.8.5",
     "dexie": "^4.0.11",
-    "nostr-tools": "^2.12.0",
+    "nostr-tools": "github:jb55/nostr-tools",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "reactflow": "^11.11.4"
