--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.63.0",
     "@noble/secp256k1": "^2.2.3",
     "canvas-confetti": "^1.9.3",
     "dagre": "^0.8.5",
