--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,13 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Backup files
+*.bak
+*.bak[0-9]
+*.bak[0-9][0-9]
+
+# Environment files
+.env
+.env.local
+.env.*.local
