Fix avatar saving, update README, and improve .gitignore
- Fix Ready Player Me avatar URL not being saved (now handles both string and structured event formats)
- Complete rewrite of README with professional structure and clear feature breakdown
- Update .gitignore to exclude docs/, community-assets/, and BETA-SAFETY-CHECKLIST.md

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,11 @@ dist-ssr
 .env
 .env.local
 .env.*.local
+
+# Documentation and planning files (not part of build)
+docs/
+BETA-SAFETY-CHECKLIST.md
+community-assets/
+
+# Keep these docs exceptions if needed
+!docs/README.md
